# pytest-result-sender

./: .flake8  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
tests/: test_01.py
