[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sunlin", email = "1120795496@qq.com"},
]
dependencies = [
    "pytest>=8.3.2",
    "requests>=2.32.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir="src"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]

[tool.isort]
profile="black"
multi_line_output=3

[tool.black]
exclude='''
/(
      \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)/
'''
[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
]}

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

